<resources>
    <string name="app_name">Catora</string>
    <string name="welcome_to">Welcome To</string>
    <string name="input_username">Input Username</string>
    <string name="input_password">Input Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="background">background</string>
    <string name="home">Home</string>
    <string name="upload">upload</string>
    <string name="profile">Profile</string>
    <string name="searchbar_hint">Search</string>
</resources>